--- a/templates/blog.html
+++ b/templates/blog.html
@@ -19,5 +19,9 @@
         {% endif %}
 
     {% endfor %}
+
+    <a href="{{ url_for('get_blog') }}">Go To Blog</a>
+    <!-- Actually for some of the pages, we need to give parameters for entering. We can do so like below.-->
+
 </body>
 </html>
